[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Unused/GenericTool.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Scripts/VisualizerUI.gd" type="Script" id=3]


[node name="VisualizerUI" type="MarginContainer"]
margin_right = 318.0
margin_bottom = 64.0
script = ExtResource( 3 )
max_battery = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 318.0
margin_bottom = 64.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 2 )

[node name="VisualizerResourceContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 64.0
margin_right = 318.0
margin_bottom = 64.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )

[node name="BatteryContainer" type="HBoxContainer" parent="HBoxContainer/VisualizerResourceContainer"]
margin_bottom = 64.0
size_flags_horizontal = 0
custom_constants/separation = 0
script = ExtResource( 1 )

[node name="ConsumptionProgress" type="ProgressBar" parent="HBoxContainer/VisualizerResourceContainer"]
visible = false
margin_bottom = 64.0
size_flags_horizontal = 0
size_flags_vertical = 1
max_value = 0.0
percent_visible = false
script = ExtResource( 1 )
